Changelog 4.4.0 (2021-05-21)
----------------------------
* Upgrading kotlin extension module to use Kotlin 1.5.0 (previously 1.4.21 was used)
* Upgrading commons-io from 2.4.0 to 2.8.0
* Apache http client is upgraded from 4.5.3 to 4.5.13 (thanks to Daniel Reissenberger for pull request)
* Improved oauth compatibility with new http client
* Fixed a bug in EncoderConfig where user configured was accidentally set to true in default constructor
* Non-backward compatible change: REST Assured will no longer add "charset=utf-8" by default to application/json content-type's since this is not recommended by RFC 7159.
  REST Assured will still automatically encode content as UTF-8, it's just that the charset is not added. To revert to the old behavior do:

    RestAssured.config(RestAssured.config().encoderConfig(EncoderConfig.encoderConfig().defaultCharsetForContentType("UTF-8", "application/json")))

  or specify the charset explicitly in the request:

    given().contentType(ContentType.JSON.withCharset(UTF_8)). ..
 (thanks to Michal Domagala for initial pull request)
* Added MULTIPART to as an option ContentType (thanks to Yusuf Tayman for pull request)
* Upgraded groovy from 3.0.7 to 3.0.8

Changelog 4.3.3 (2020-12-11)
----------------------------
* Upgrading kotlin extension module to use Kotlin 1.4.21 (previously 1.4.10 was used)
* Upgraded groovy from 3.0.6 to 3.0.7
* Ensure subclasses of ResponseOptions do not break Prettifier (#1425) (thanks to Sam Neirinck for PR)

Changelog 4.2.1 (2020-12-11)
----------------------------
* Backport of: Fix content type name before charset recognition (#1341)

Changelog 4.3.2 (2020-11-08)
----------------------------
* Upgrade json-schema-validator to 2.2.14 (issue 1397) (thanks to Guillaume Smet for PR)
* Upgrading apache commons lang3 from 3.4 to 3.11.
* Added asPrettyString method to ResponseBody (issue 1395) (thanks to GithubMood for PR)